<resources>
    <string name="app_name">Mechanic</string>
    <string name="hint_username">Enter username</string>
    <string name="hint_password">Enter password</string>
    <string name="text_view_add_user">Register</string>
    <string name="mechanic_login_view">Mechanic Login</string>
    <string name="dialog_add_user">Add User</string>
    <string name="button_add_user">Add a user</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string-array name="roles">
        <item>guest</item>
        <item>moderator</item>
        <item>admin</item>
    </string-array>
    <string name="title_activity_display_appointments">DisplayAppointmentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_id">Enter your password</string>
    <string name="hint_name">Enter your username</string>
    <string name="please_ask_and_or_rate_our_mechanic">Please ask and/or rate our mechanic:</string>
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>